--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -6,7 +6,7 @@ page-register {
     }
 
     //overwrite the css in app.scss
-    .login-content{
-        padding-top: 85px;
-    }
+    // .login-content{
+    //     padding-top: 85px;
+    // }
 }
